# chip8_emu

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE_HEADER  README.md
src/: chip8.c  chip8.h  debug_def.h  instructions.c  instructions.h  main.c  types.h
